--- a/LLUBOTs_MUIIR_2023_ESP32/libraries/ArduinoJson/extras/tests/CMakeLists.txt
+++ b/LLUBOTs_MUIIR_2023_ESP32/libraries/ArduinoJson/extras/tests/CMakeLists.txt
@@ -16,11 +16,14 @@ add_subdirectory(Deprecated)
 add_subdirectory(FailingBuilds)
 add_subdirectory(IntegrationTests)
 add_subdirectory(JsonArray)
+add_subdirectory(JsonArrayConst)
 add_subdirectory(JsonDeserializer)
 add_subdirectory(JsonDocument)
 add_subdirectory(JsonObject)
+add_subdirectory(JsonObjectConst)
 add_subdirectory(JsonSerializer)
 add_subdirectory(JsonVariant)
+add_subdirectory(JsonVariantConst)
 add_subdirectory(ResourceManager)
 add_subdirectory(Misc)
 add_subdirectory(MixedConfiguration)
